################################################################################
# SoftFloatIncGen
#
# MLIR SoftFloat dialect generated includes.
################################################################################

add_custom_target(SoftFloatIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
